# fm

./: .gitignore  Cargo.toml  Gopkg.toml  Makefile  README.md  TODO.md  commands.go  config.go  config.json  controls.go  directory_tree.go  display.go  getug  go.mod  go.sum  install.sh  keys.go  main.go  ops.go  state.go
config/: config.go  vimrc.preview
display/: color_print.go  directories.go  draw.go  helpers.go
fs/: directory.go  directory_tree.go  file.go
handlers/: cmd.go  conf.go  keys.go  main.go  ops.go  single.go
handlers_old/: command.go  main.go  normal.go
ops/: file_ops.go
src/: log.rs  main.rs
src/finder/: NOTES.md  matcher.rs  mod.rs  scorer.rs
src/fm/: command.rs  dir.rs  file.rs  fm.rs  mod.rs  render.rs  state.rs  tree.rs
src/fs/: dir.rs  file.rs  mod.rs  state.rs  tree.rs
test/: main.go
