[package]
name = "fm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26"
tui = { package = "ratatui", version = "0.22.0", features = ["all-widgets"]}
shellexpand = "3.0.0"
cfg-if = "1.0.0"
